# django-tutorial

./: .editorconfig  .pre-commit-config.yaml  README.md  pyproject.toml
django_tutorial/: asgi.py  settings.py  urls.py  wsgi.py
polls/: models.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: detail.html  index.html
