[project]
name = "django-tutorial"
version = "0.1.0"
description = "Django Tutorial"
authors = [
  { name = "Zoltan", email = "" },
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
  "django>=5.0.1",
]

dev-dependencies = [
  "ruff>=0.1.14",
  "django-stubs>=4.2.7",
  "pyright>=1.1.345",
  "pylance>=0.9.8",
  "pre-commit>=3.6.0",
]

[tool.pdm]
package-type = "pypi"

[tool.django-stubs]
django_settings_module = "django_tutorial.settings"
