[project]
name = "django-tutorial"
version = "0.1.0"
description = "Django Tutorial"
authors = [
  { name = "Zoltan" },
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "django>=5.0.1",
]

[tool.pdm]
package-type = "application"

[tool.pdm.scripts]
manage = "pdm run manage.py"
serve = "pdm manage runserver"

[tool.pdm.dev-dependencies]
dev = [
  "ruff>=0.1.14",
  "django-stubs>=4.2.7",
  "pyright>=1.1.345",
  "pylance>=0.9.8",
  "pre-commit>=3.6.0",
]

[tool.django-stubs]
django_settings_module = "django_tutorial.settings"

[tool.pyright]
venvPath = "."
venv = ".venv"
